--------------------------------------------------------------------------------
zg 2026-01-18 20:23:30+02:00 - build 6635

1. correction of 6608.2.

--------------------------------------------------------------------------------
drkns 2026-01-17 23:27:18+00:00 - build 6634

1. Correction of 6633.3.

--------------------------------------------------------------------------------
drkns 2026-01-17 23:11:32+00:00 - build 6633

1. Correction of 6626.2.

2. Remove redundant menu redraws on CtrlUp/Down.

3. Optimize block Undo in Editor.

4. Refactoring.
   Make checking struct sizes easier.

--------------------------------------------------------------------------------
zg 2026-01-16 15:52:07+02:00 - build 6632

1. new fields in EditorInfo: WindowArea and ClientArea.

--------------------------------------------------------------------------------
drkns 2026-01-11 20:35:34+00:00 - build 6631

1. Correction of 6629.

--------------------------------------------------------------------------------
drkns 2026-01-11 16:51:41+00:00 - build 6630

1. Continue fullwidth-aware rendering.

--------------------------------------------------------------------------------
drkns 2026-01-11 14:05:09+00:00 - build 6629

1. Refactoring.

2. Continue fullwidth-aware rendering.

--------------------------------------------------------------------------------
yjh 2026-01-10 22:34:51+03:00 - build 6628

1. SQLite: v3.51.2

--------------------------------------------------------------------------------
drkns 2026-01-09 20:52:21+00:00 - build 6627

1. Exception handling improvements.

--------------------------------------------------------------------------------
drkns 2026-01-08 23:31:21+00:00 - build 6626

1. Experimental: support CD environment variable.

2. Exception handling improvements.

--------------------------------------------------------------------------------
w17 2026-01-04 21:12:17+03:00 - build 6625

1. Experimental -- far:config CodePages.NoAutoDetectCJK = true
