@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 2026-01-21 00:46:34+00:00 - build 6636
+
+1. gh-1065: Continue fullwidth-aware rendering.
+
+--------------------------------------------------------------------------------
 zg 2026-01-18 20:23:30+02:00 - build 6635
 
 1. correction of 6608.2.
